- Added facility to manage 64bit status word with each event
- Fixed bug where factories added from plugins did NOT get preference
- Enhanced ctl-C signal handler to do a better job of forcing exits
  when multiple SIGINTs are received
- Added optional argument to JEventLoop::Get to allow any DEFTAG setting
  to be ignored making it easier to get objects from the default factory

Changes in version 0.6.4

- Updated to use Xerces 3 or Xerces 2 (detected at configure level)
- Updated online documentation generation
- Added THREAD_TIMEOUT_FIRST_EVENT parameter
- Added ability to change the number of threads on the fly. This
  can be done using janactl, or progamatically using the JApplication
  pointer.
- Fixed bug that caused deadlock when --factoryreport specified
- Fixed bug where GetTag could cause seg. fault when used on object 
  created by event source
- Fixed bug that caused occasional deadlock when trying to merge
  threads at end of event processing
- Updated janaroot to accept stringtypes
- Added mkfactory_plugin script
- Added general list of rw locks indexed by name
- Added special methods to JApplication for (un)locking rw lock for ROOT 
- Added SConstruct script for building with scons
- Fix bug that caused calibration tables with >10 columns to place columns
  out of order
- Added CreateParameter method to JParameterManager. Also fixed
  bug where a race condition could occur in SetDefaultParameter
- Throw exception with informative message if JApplication is initialized
  twice.

Changes in version 0.6.3

- Added scripts directory along with scripts for creating some
  common classes used in the framework.
- Modified Makefile.lib to work with GNU make 3.82
- Reorganized build system to be closer to classic unix style
- Added jana-config script for easier setting of compiler options
- Fixed bug where early call to JApplication::Quit() didn't stop
  program execution
- Added JANA:BATCH_MODE config. param. to disable certain messages